# 04_virtual_environments_starter

./: README.md
config/: gatorgrade.yml
myproject/: pyproject.toml
myproject/myproject/: main.py
writing/: reflection.md
