[tool.poetry]
name = "myproject"
version = "0.1.0"
description = ""
authors = ["Oliver Bonham-Carter <obonhamcarter@allegheny.edu>"]
readme = "README.md"

[tool.poetry.scripts]
myproject = "myproject.main:cli"

[tool.poetry.dependencies]
python = "^3.9"
typer = "^0.6.1"
rich = "^12.5.1"
black = "^22.8.0"
mypy = "^0.981"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
